# oslobanden

./: .gitignore  Cargo.toml  README.md  install.bat  install.sh
oslobanden-server/: Cargo.toml  config.toml
oslobanden-server/src/: config.rs  main.rs
oslobanden-server/src/server/: handler.rs  mod.rs  server.rs
oslobanden-shared/: Cargo.toml
oslobanden-shared/src/: lib.rs
oslobanden-site/: Cargo.toml  index.css  index.html
oslobanden-site/src/: lib.rs
oslobanden-wasm/: Cargo.toml
oslobanden-wasm-com/: Cargo.toml
oslobanden-wasm/html/: index.html
oslobanden-wasm/pkg/: .gitignore  frontend.js  frontend_bg.wasm
oslobanden-wasm/src/: dom.rs  fetch.rs  lib.rs  mainpage.rs  utils.rs
