[package]
name = "oslobanden"
version = "0.1.0"
authors = ["Geirmund Simonsen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.8", features = ["server"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.3"
oslobanden-wasm-com = { path = "../oslobanden-wasm-com" }