[package]
name = "oslobanden-wasm"
version = "0.1.0"
authors = ["Geirmund Simonsen <geirmund.simonsen@gmail.com>"]
edition = "2018"
description = "Experimental frontend WASM"
repository = "https://github.com/geirmundsimonsen/calendar-reminder-system"
license = "GPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
oslobanden-wasm-com = { path = "../oslobanden-wasm-com" }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Headers',
  'HtmlElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false