[package]
name = "oslobanden-wasm"
version = "0.1.0"
authors = ["Geirmund Simonsen <geirmund.simonsen@gmail.com>"]
edition = "2018"
description = "Experimental frontend WASM"
repository = "https://github.com/geirmundsimonsen/calendar-reminder-system"
license = "GPL-3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.74" }
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = { version = "0.1.6", optional = true }
oslobanden-wasm-com = { path = "../oslobanden-wasm-com" }
weblib = { git = "https://github.com/geirmundsimonsen/weblib", rev = "fdbf3723a0135a70d81210f7422ccc533658c402" }

[profile.release]
lto = true
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false